--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,18 @@
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/jest": "^24.0.25",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "sequelize-cli": "^5.5.1",
+    "sucrase": "^3.12.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "NODE_ENV=test jest"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "pg": "^7.17.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.3",
+    "sqlite3": "^4.1.1"
   }
 }
