--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,22 @@
     "@types/jest": "^24.0.25",
     "jest": "^24.9.0",
     "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.12.0"
+    "sucrase": "^3.12.0",
+    "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "NODE_ENV=test jest"
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^7.17.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "youch": "^2.0.10"
   }
 }
