--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,8 @@
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/jest": "^24.0.25",
+    "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
     "jest": "^24.9.0",
     "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.0",
